--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -96,6 +96,16 @@
         <div class="carousel-inner">
         <div class="carousel-item active">
             <div class="row">
+
+                <div class="col-3"><img class="d-block w-100" src="https://i.imgur.com/EA1v0xb.jpg" alt="Primeiro Slide">
+                </div>
+
+                <div class="col-3"><img class="d-block w-100" src="" alt="Primeiro Slide">
+                </div>
+
+                <div class="col-3"><img class="d-block w-100" src="https://i.imgur.com/Vkw7kZG.png" alt="Primeiro Slide">
+                </div>
+
                 <div class="col-3"><img class="d-block w-100" src="https://i.imgur.com/EA1v0xb.jpg" alt="Primeiro Slide">
                 </div>
             </div>
@@ -104,30 +114,36 @@
             <div class="row">
                 <div class="col-3"><img class="d-block w-100" src="https://i.imgur.com/06WlUVI.png" alt="Primeiro Slide">
                 </div>
+
                 <div class="col-3"><img class="d-block w-100" src="https://i.imgur.com/EA1v0xb.jpg" alt="Primeiro Slide">
                 </div>
+
                 <div class="col-3"><img class="d-block w-100" src="https://i.imgur.com/GjszAsI.jpg" alt="Primeiro Slide">
                 </div>
+
                 <div class="col-3"><img class="d-block w-100" src="https://i.imgur.com/EA1v0xb.jpg" alt="Primeiro Slide">
                 </div>
             </div>
         </div>
-
         </div>
-        <div class="container d-flex align-items-start">
-            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon d-flex align-items-start" aria-hidden="true"></span>
+        <div class="container d-flex justify-content-between">
+            <a class="btn btn-info" href="#carouselExampleControls" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon " aria-hidden="true"></span>
                 <span class="sr-only">Anterior</span>
                 </a>
-                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+
+                <a class="btn btn-info" href="#carouselExampleControls" role="button" data-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="sr-only">Próximo</span>
-                </a>
+            </a>
         </div>
+
+
     </div>
 </div>
 
 <!--/Carousel-->
+
 
 
 
