--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,158 +1,186 @@
 <div class="container-fluid p-0">
     <!--Navbar-->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Logo</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado"
-        aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
-        <span class="navbar-toggler-icon"></span>
-    </button>
+    <nav class="navbar navbar-expand-sm">
+        <a class="navbar-brand" href="#">Livraria Abraço</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado"
+            aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-    <div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(página atual)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Loja</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Sobre Nós</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Contato</a>
-            </li>
+        <div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Home <span class="sr-only">(página atual)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Loja</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Sobre Nós</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Contato</a>
+                </li>
 
-        </ul>
-        <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-                <a class="nav-link" href="#">Carrinho</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Login</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Cadastro</a>
-            </li>
+            </ul>
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Login</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Cadastro</a>
+                </li>
 
-        </ul>
-
-    </div>
-</nav>
-<!--/Navbar-->
-
-<!--Carrossel-->
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner">
-        <div class="carousel-item active">
-            <!--TAMANHO-DE-IMAGEM-1280x568-->
-            <img class="d-block w-100"
-                src="https://initiate.alphacoders.com/images/694/cropped-1280-566-694702.jpg?5871" alt="Primeiro Slide">
-        </div>
-        <div class="carousel-item">
-            <img class="d-block w-100" src="https://initiate.alphacoders.com/images/697/cropped-1280-566-697523.jpg?868"
-                alt="Segundo Slide">
-        </div>
-        <div class="carousel-item">
-            <img class="d-block w-100"
-                src="https://initiate.alphacoders.com/images/541/cropped-1280-566-541001.jpg?8613" alt="Terceiro Slide">
-        </div>
-    </div>
-    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Anterior</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Próximo</span>
-    </a>
-</div>
-<!--/Carrossel-->
-
-<!--Jumbotron-->
-<div class="jumbotron">
-    <div class="col-md-8">
-        <h1 class="display-4 d-flex justify-content-center">Apoie a Nossa causa!</h1>
-        <div class="d-flex justify-content-center">
-            <p class="lead">Este é um simples componente jumbotron para chamar mais atenção a um determinado conteúdo ou
-                informação.</p>
-        </div>
-        <div class="d-flex justify-content-center">
-            <a class="btn btn-outline-dark" href="#" role="button">Leia mais</a>
+            </ul>
 
         </div>
+    </nav>
+    <!--/Navbar-->
 
-    </div>
-</div>
-<!--/Jumbotron-->
-
-<!--Carousel-->
-<div class="container">
-    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+    <!--Carrossel-->
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
         <div class="carousel-inner">
-        <div class="carousel-item active">
-            <div class="row">
-
-                <div class="col-3"><img class="d-block w-100" src="https://i.imgur.com/EA1v0xb.jpg" alt="Primeiro Slide">
-                </div>
-
-                <div class="col-3"><img class="d-block w-100" src="" alt="Primeiro Slide">
-                </div>
-
-                <div class="col-3"><img class="d-block w-100" src="https://i.imgur.com/Vkw7kZG.png" alt="Primeiro Slide">
-                </div>
-
-                <div class="col-3"><img class="d-block w-100" src="https://i.imgur.com/EA1v0xb.jpg" alt="Primeiro Slide">
-                </div>
+            <div class="carousel-item active">
+                <!--TAMANHO-DE-IMAGEM-1280x568-->
+                <img class="d-block w-100" src="https://i.imgur.com/EA1v0xb.jpg" alt="Primeiro Slide" width="1280"
+                    height="350">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="https://i.imgur.com/06WlUVI.png" alt="Segundo Slide" width="1280"
+                    height="503">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="https://i.imgur.com/GjszAsI.jpg" alt="Terceiro Slide" width="1280"
+                    height="503">
             </div>
         </div>
-        <div class="carousel-item">
-            <div class="row">
-                <div class="col-3"><img class="d-block w-100" src="https://i.imgur.com/06WlUVI.png" alt="Primeiro Slide">
-                </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Anterior</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Próximo</span>
+        </a>
+    </div>
+    <!--/Carrossel-->
 
-                <div class="col-3"><img class="d-block w-100" src="https://i.imgur.com/EA1v0xb.jpg" alt="Primeiro Slide">
-                </div>
-
-                <div class="col-3"><img class="d-block w-100" src="https://i.imgur.com/GjszAsI.jpg" alt="Primeiro Slide">
-                </div>
-
-                <div class="col-3"><img class="d-block w-100" src="https://i.imgur.com/EA1v0xb.jpg" alt="Primeiro Slide">
-                </div>
+    <!--Jumbotron-->
+    <div class="jumbotron">
+        <div class="col-md-8">
+            <h1 class="display-4 d-flex justify-content-center">Apoie a Nossa causa!</h1>
+            <div class="text-center">
+                <p class="lead">Mussum Ipsum, cacilds vidis litro abertis. Nec orci ornare consequat. Praesent lacinia
+                    ultrices consectetur. Sed non ipsum felis. Admodum accumsan disputationi eu sit.
+                </p>
+            </div>
+            <div class="d-flex justify-content-center">
+                <a class="btn btn-outline-dark" href="#" role="button">Leia mais</a>
             </div>
         </div>
+        <div class="col-md-6">
+            <div>
+                <img src="https://i.imgur.com/1dpImAQ.png" alt="garota-com-livros" width="400pt" height="300pt">
+            </div>
         </div>
-        <div class="container d-flex justify-content-between">
-            <a class="btn btn-info" href="#carouselExampleControls" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon " aria-hidden="true"></span>
-                <span class="sr-only">Anterior</span>
+
+    </div>
+    <!--/Jumbotron-->
+
+    <!--Carousel-->
+    <div class="container">
+        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <div class="row">
+
+                        <div class="col-3"><img class="d-block w-100" src="https://i.imgur.com/EA1v0xb.jpg"
+                                alt="Primeiro Slide">
+                        </div>
+
+                        <div class="col-3"><img class="d-block w-100" src="" alt="Primeiro Slide">
+                        </div>
+
+                        <div class="col-3"><img class="d-block w-100" src="https://i.imgur.com/Vkw7kZG.png"
+                                alt="Primeiro Slide">
+                        </div>
+
+                        <div class="col-3"><img class="d-block w-100" src="https://i.imgur.com/EA1v0xb.jpg"
+                                alt="Primeiro Slide">
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="row">
+                        <div class="col-3"><img class="d-block w-100" src="https://i.imgur.com/06WlUVI.png"
+                                alt="Primeiro Slide">
+                        </div>
+
+                        <div class="col-3"><img class="d-block w-100" src="https://i.imgur.com/EA1v0xb.jpg"
+                                alt="Primeiro Slide">
+                        </div>
+
+                        <div class="col-3"><img class="d-block w-100" src="https://i.imgur.com/GjszAsI.jpg"
+                                alt="Primeiro Slide">
+                        </div>
+
+                        <div class="col-3"><img class="d-block w-100" src="https://i.imgur.com/EA1v0xb.jpg"
+                                alt="Primeiro Slide">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="container d-flex justify-content-between">
+                <a class="btn btn-info" href="#carouselExampleControls" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon " aria-hidden="true"></span>
+                    <span class="sr-only">Anterior</span>
                 </a>
 
                 <a class="btn btn-info" href="#carouselExampleControls" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Próximo</span>
-            </a>
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Próximo</span>
+                </a>
+            </div>
+
+
         </div>
 
+    </div>
+    <div class="row d-flex justify-content-center">
+        <button type="button" class="btnVermais">Ver mais</button>
+    </div>
+
+    <hr class="hrPontilhado">
+
+    <!--/Carousel-->
+
+
+
+
+    <div class="container containerOqueFazermos">
+        <h2 class="h2OqueFazemos text-center">O QUE FAZEMOS</h2>
+        <div class="left">
+            <p>Mussum Ipsum, cacilds vidis litro abertis. Nec orci ornare consequat. Praesent lacinia ultrices
+                consectetur. Sed non ipsum felis. Admodum accumsan disputationi eu sit.
+                Mussum Ipsum, cacilds vidis litro abertis. Nec orci ornare consequat. Mussum Ipsum, cacilds vidis litro
+                abertis. Nec orci ornare consequat.
+                Nec orci ornare consequat. Mussum Ipsum, cacilds vidis litro abertis. Nec orci ornare consequat. Mussum
+                Ipsum, cacilds vidis litro abertis. Nec orci ornare consequat.
+
+                Mussum Ipsum, cacilds vidis litro abertis. Nec orci ornare consequat. Mussum Ipsum, cacilds vidis litro
+                abertis. Nec orci ornare consequat.
+                Mussum Ipsum, cacilds vidis litro abertis. Nec orci ornare consequat. Mussum Ipsum, cacilds vidis litro
+                abertis. Nec orci ornare consequat.
+            </p>
+        </div>
+        <div>
+            <img src="" alt="">
+        </div>
 
     </div>
-</div>
-
-<!--/Carousel-->
-
-
-
-
-<div class="container">
     <hr>
-    <h1 class="text-center">Só pra encher espaço ai</h1>
-</div>
-
-
-
-
-
