--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,5 +1,7 @@
 .navbar{
     background-color: #005186;
+    font-family: SansSerif;
+    font-size: 13pt;
 }
 
 .navbar-brand{
@@ -19,11 +21,27 @@
 }
 
 .jumbotron{
-    display: flex;
-
-
+    background-image: url(https://i.imgur.com/QcRDPA3.png);
+    background-repeat: round;
+    padding-top: 25px;
+    padding-bottom: 25px;
+    margin-bottom: 25px;
 }
 
+.imagemMenininha{
+    background-image: url(https://i.imgur.com/1dpImAQ.png);
+    background-position: 95%;
+    background-repeat: no-repeat;
+    background-size: 18%;
+}
+
+.jumbotron-imagem:hover{
+    
+    background-image: url(https://i.imgur.com/noDm370.png);
+    background-position: 90%;
+    background-repeat: no-repeat;
+    background-size: 340px;
+}
 
 .btnVermais{
     background-color: white;
@@ -40,7 +58,14 @@
 
 .hrPontilhado{
     border:  2px dashed #C1DFF2;
-    width: 1200px;
+    width: 1000px;
+}
+
+.hrMenor{
+    background-color: black;
+    height: 1px;
+    width: 45%;
+    opacity: 30%;
 }
 
 .h2OqueFazemos{
@@ -48,6 +73,19 @@
     font-family: Century Gothic;
 }
 
-.containerOqueFazermos{
+.oQueFazemos{
+    color: #005186;
+}
 
+.texto-esquerda{
+    text-align: left;
+}
+
+.margem{
+    margin-left: 10%;
+    margin-right: 10%;
+}
+
+.texto-direita{
+    text-align: justify;
 }
