--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -47,15 +47,15 @@
         <div class="carousel-item active">
             <!--TAMANHO-DE-IMAGEM-1280x568-->
             <img class="d-block w-100" src="https://i.imgur.com/lfu8aEn.jpg" alt="Primeiro Slide" width="1280"
-                height="700">
+                height="757">
         </div>
         <div class="carousel-item">
             <img class="d-block w-100" src="https://i.imgur.com/vYNcgGD.jpg" alt="Segundo Slide" width="1280"
-                height="700">
+                height="757">
         </div>
         <div class="carousel-item">
             <img class="d-block w-100" src="https://i.imgur.com/gUfdkjr.jpg" alt="Terceiro Slide" width="1280"
-                height="700">
+                height="757">
         </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -76,7 +76,7 @@
         <div class="row imagemMenininha">
             <div class="col-md-8">
                 <h1 class="display-4 d-flex justify-content-center ">Apoie a Nossa causa!</h1>
-                <div class="text-center ">
+                <div class="text-center color">
                     <p class="lead">Mussum Ipsum, cacilds vidis litro abertis. Nec orci ornare consequat. Praesent
                         lacinia
                         ultrices consectetur. Sed non ipsum felis. Admodum accumsan disputationi eu sit.
@@ -95,9 +95,10 @@
     <!--/Jumbotron-->
 </div>
 
+<hr class="hrPontilhado">
 <!--Produtos em destaque-->
 <div class="md-col-12">
-    <h2 class="oQueFazemos text-center">Produtos em destaque</h2>
+    <h2 class="oQueFazemos text-center">PRODUTOS EM ESTOQUE</h2>
 </div>
 <hr class="hrMenor">
 
@@ -247,12 +248,12 @@
 </div>
 
 
-<div class="container d-flex justify-content-between">
-    <div class="col-md-6">
-        <img src="https://i.imgur.com/cFyuOd5.jpg" alt="" width="300px" height="330px">
+<div class="container d-flex align-items-center">
+    <div class="col-md-6 d-flex justify-content-center">
+        <img src="https://i.imgur.com/byTmZst.jpg" alt="" width="50%" height="50%">
     </div>
-    <div class="col-md-6 margemFazemos">
-        <p class="texto-direita"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum explicabo debitis
+    <div class="col-md-4 ">
+        <p class=""> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum explicabo debitis
             laborum
             facere dolore.
             Accusantium magnam aspernatur reiciendis vel consectetur adipisci, iusto quibusdam aut mollitia, recusandae
@@ -271,8 +272,11 @@
     <div class="container">
         <div class="row mb-3">
             <div class="col-md-12 d-flex justify-content-center">
-                <a href="https://www.instagram.com/guhh.rabelo/" target="_blank" class="p-2">
-                    <img class="tm-social" src="assets/img/instagram.png" alt="Logo instagram">
+                <a href="https://www.instagram.com" target="_blank" class="p-2">
+                    <img class="social" src="https://i.imgur.com/dCU0HWR.png" alt="Logo instagram">
+                </a>
+                <a href="https://www.facebook.com" target="_blank" class="p-2">
+                    <img class="social" src="https://i.imgur.com/Oze6Zm3.png" alt="Logo instagram">
                 </a>
             </div>
         </div>
@@ -285,3 +289,15 @@
     </div>
 </footer>
 <!--/Rodapé-->
+
+
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado"
+        aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+
+</nav>
