Correção de arquivos

--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -74,7 +74,7 @@
 
                     <div class="d-flex justify-content-center">
                         <button type="submit" class="botaoEntrar mr-4" routerLink='/entrar'>Cancelar</button>
-                        <button type="submit" class="botaoCancelar" >Cadastrar</button>
+                        <button type="submit" class="botaoCadastrar" >Cadastrar</button>
                     </div>
 
                 </div>
