--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<app-sobre-nos></app-sobre-nos>
+<!--<app-sobre-nos></app-sobre-nos>-->
 
 <!--<app-home></app-home>-->
+
+<app-cadastro></app-cadastro>
