--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,6 @@
 
 <!--<app-home></app-home>-->
 
-<app-cadastro></app-cadastro>
+<!--<app-cadastro></app-cadastro>-->
+
+<router-outlet></router-outlet>
