--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -15,7 +15,7 @@
                 <a class="nav-link" href="#">LOJA</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">SOBRE NÓS</a>
+                <a class="nav-link" routerLink='/sobre-nos'>SOBRE NÓS</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">CONTATOS</a>
@@ -27,7 +27,7 @@
                 <a class="nav-link" href="#">LOGIN</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">CADASTRO</a>
+                <a class="nav-link" routerLink='/cadastro'>CADASTRO</a>
             </li>
 
         </ul>
