--- a/src/app/sobre-nos/sobre-nos.component.html
+++ b/src/app/sobre-nos/sobre-nos.component.html
@@ -9,25 +9,25 @@
   <div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(página atual)</span></a>
+        <a class="nav-link" href="#">HOME <span class="sr-only">(página atual)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Loja</a>
+        <a class="nav-link" href="#">LOJA</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Sobre Nós</a>
+        <a class="nav-link" routerLink='/sobre-nos'>SOBRE NÓS</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Contato</a>
+        <a class="nav-link" href="#">CONTATO</a>
       </li>
 
     </ul>
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <a class="nav-link" href="#">Login</a>
+        <a class="nav-link" href="#">LOGIN</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Cadastro</a>
+        <a class="nav-link" routerLink='/cadastro'>CADASTRO</a>
       </li>
 
     </ul>
