--- a/src/app/sobre-nos/sobre-nos.component.html
+++ b/src/app/sobre-nos/sobre-nos.component.html
@@ -1,5 +1,5 @@
 <!--Navbar-->
-<nav class="navbar navbar-expand-sm">
+<nav class="navbar navbar-expand-sm fixed-top">
   <a class="navbar-brand" href="#">Livraria Abraço</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado"
     aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
@@ -12,19 +12,19 @@
         <a class="nav-link" href="#">HOME <span class="sr-only">(página atual)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">LOJA</a>
+        <a class="nav-link" routerLink='/loja'>LOJA</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink='/sobre-nos'>SOBRE NÓS</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">CONTATO</a>
+        <a class="nav-link" routerLink='/contato'>CONTATOS</a>
       </li>
 
     </ul>
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <a class="nav-link" href="#">LOGIN</a>
+        <a class="nav-link" routerLink='/login'>LOGIN</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink='/cadastro'>CADASTRO</a>
@@ -203,9 +203,14 @@
               <br>
               <br>
               <br>
-              <footer><img height="47px" width="47px" src="https://i.imgur.com/mxQhjrW.gif" alt=""> <img
-                  src="https://i.imgur.com/rZ6jU33.png" alt=""><img height="47px" width="47px"
-                  src="https://i.imgur.com/JXSPDzk.gif" alt=""></footer>
+              <footer>
+                <a id="aumentaIconsInsta" href="https://www.instagram.com/glicogomes/"><img height="47px" width="47px"
+                    src="https://i.imgur.com/mxQhjrW.gif" alt=""></a>
+                <a id="aumentaIconsGit " href="https://github.com/danielagff?tab=repositories"><img
+                    src="https://i.imgur.com/rZ6jU33.png" alt=""></a>
+                <a id="aumentaIconsLink" href="https://www.linkedin.com/in/danielagff/"><img height="47px" width="47px"
+                    src="https://i.imgur.com/JXSPDzk.gif" alt=""></a>
+              </footer>
 
               <div class="d-flex flex-row justify-content-center">
 
@@ -223,9 +228,16 @@
               <br>
               <br>
 
-              <footer><img height="47px" width="47px" src="https://i.imgur.com/mxQhjrW.gif" alt=""> <img
-                  src="https://i.imgur.com/rZ6jU33.png" alt=""><img height="47px" width="47px"
-                  src="https://i.imgur.com/JXSPDzk.gif" alt=""></footer>
+              <footer>
+                <a id="aumentaIconsInsta" href="https://www.instagram.com/glicogomes/"><img height="47px" width="47px"
+                    src="https://i.imgur.com/mxQhjrW.gif" alt=""></a>
+                <a id="aumentaIconsGit " href="https://github.com/danielagff?tab=repositories"><img
+                    src="https://i.imgur.com/rZ6jU33.png" alt=""></a>
+                <a id="aumentaIconsLink" href="https://www.linkedin.com/in/danielagff/"><img height="47px" width="47px"
+                    src="https://i.imgur.com/JXSPDzk.gif" alt=""></a>
+              </footer>
+
+
 
 
               <div class="d-flex flex-row justify-content-center">
@@ -244,9 +256,16 @@
               <br>
               <br>
 
-              <footer><img a height="47px" width="47px" src="https://i.imgur.com/mxQhjrW.gif" alt=""> <img
-                  src="https://i.imgur.com/rZ6jU33.png" alt=""><img height="47px" width="47px"
-                  src="https://i.imgur.com/JXSPDzk.gif" alt=""></footer>
+              <footer>
+                <a id="aumentaIconsInsta" href="https://www.instagram.com/glicogomes/"><img height="47px" width="47px"
+                    src="https://i.imgur.com/mxQhjrW.gif" alt=""></a>
+                <a id="aumentaIconsGit " href="https://github.com/danielagff?tab=repositories"><img
+                    src="https://i.imgur.com/rZ6jU33.png" alt=""></a>
+                <a id="aumentaIconsLink" href="https://www.linkedin.com/in/danielagff/"><img height="47px" width="47px"
+                    src="https://i.imgur.com/JXSPDzk.gif" alt=""></a>
+              </footer>
+
+
 
               <div class="d-flex flex-row justify-content-center">
 
@@ -264,14 +283,14 @@
               <br>
               <br>
 
-              <footer><img height="47px" width="47px" src="https://i.imgur.com/mxQhjrW.gif" alt=""> <img
-                  src="https://i.imgur.com/rZ6jU33.png" alt=""><img height="47px" width="47px"
-                  src="https://i.imgur.com/JXSPDzk.gif" alt=""></footer>
-
-
-
-
-
+              <footer>
+                <a id="aumentaIconsInsta" href="https://www.instagram.com/glicogomes/"><img height="47px" width="47px"
+                    src="https://i.imgur.com/mxQhjrW.gif" alt=""></a>
+                <a id="aumentaIconsGit " href="https://github.com/danielagff?tab=repositories"><img
+                    src="https://i.imgur.com/rZ6jU33.png" alt=""></a>
+                <a id="aumentaIconsLink" href="https://www.linkedin.com/in/danielagff/"><img height="47px" width="47px"
+                    src="https://i.imgur.com/JXSPDzk.gif" alt=""></a>
+              </footer>
             </div>
 
             <!-- PARTICIPANTES -->
