--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,19 +12,19 @@
                 <a class="nav-link" href="#">HOME <span class="sr-only">(página atual)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">LOJA</a>
+                <a class="nav-link" routerLink='/loja'>LOJA</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" routerLink='/sobre-nos'>SOBRE NÓS</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">CONTATOS</a>
+                <a class="nav-link" routerLink='/contatos'>CONTATOS</a>
             </li>
 
         </ul>
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link" href="#">LOGIN</a>
+                <a class="nav-link" routerLink='/login'>LOGIN</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" routerLink='/cadastro'>CADASTRO</a>
