--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,77 @@
-<p>login works!</p>
+<!--Navbar-->
+<nav class="navbar navbar-expand-sm fixed-top">
+    <a class="navbar-brand" href="#">Livraria Abraço</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado"
+        aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="#">HOME <span class="sr-only">(página atual)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" routerLink='/loja'>LOJA</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" routerLink='/sobre-nos'>SOBRE NÓS</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" routerLink='/contatos'>CONTATOS</a>
+            </li>
+
+        </ul>
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+                <a class="nav-link" routerLink='/login'>LOGIN</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" routerLink='/cadastro'>CADASTRO</a>
+            </li>
+
+        </ul>
+
+    </div>
+</nav>
+<!--/Navbar-->
+
+
+<!--Tela de Login-->
+<br>
+<br>
+
+<main>
+    <article class="main-container">
+      <div class="login-wrapper">
+
+        <section class="image-wrapper"> 
+        </section>
+
+        <section class="form-wrapper">
+          <div class="form-container align-items-center">
+           
+            <div class="form-messages">
+                <br>
+                <br>    
+              <h1 id="alinhador">Login</h1>
+            </div>
+            <br>
+            <br>
+            <br>
+             <form  action="fakeurl.php" class="form ">
+              <input type="email" name="user-email" id="user-email" placeholder="E-mail">
+              <input type="password" name="user-password" id="user-password" placeholder="Senha">
+              <a href="#" class="login-button">Entrar</a>
+            </form>
+            <p> Não tem uma conta? <a routerLink='/cadastro'>Cadastre-se</a></p>
+          </div>
+        </section>
+  
+        <!-- Imagem -->
+        
+      </div>
+    </article>
+  </main>
+
+  <!--Tela de Login-->
