--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -105,67 +105,134 @@
 <!--/Produtos em destaque-->
 
 
-<!--Carousel-->
+<!--Carousel de cards-->
 <div class="container">
-    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <div class="row">
+    
+    <!--Carousel Wrapper-->
+    <div id="multi-item-example" class="carousel slide carousel-multi-item " data-ride="carousel">
 
-                    <div class="col-3"><img class="d-block w-100" src="https://i.imgur.com/EA1v0xb.jpg"
-                            alt="Primeiro Slide">
-                    </div>
+      <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+        <!--Slides-->
+      <div class="carousel-inner" role="listbox">
 
-                    <div class="col-3"><img class="d-block w-100" src="https://i.imgur.com/06WlUVI.png"
-                            alt="Primeiro Slide">
-                    </div>
+        <!--First slide-->
+        <div class="carousel-item">
 
-                    <div class="col-3"><img class="d-block w-100" src="https://i.imgur.com/Vkw7kZG.png"
-                            alt="Primeiro Slide">
-                    </div>
+          <div class="row d-flex justify-content-center">
 
-                    <div class="col-3"><img class="d-block w-100" src="https://i.imgur.com/EA1v0xb.jpg"
-                            alt="Primeiro Slide">
-                    </div>
+            
+            <div class="col-md-3 ">
+              <div class="card mb-2 tamanhoCard">
+                <img class="card-img-top" src="https://i.imgur.com/VMYSj2p.jpeg" alt="Card image cap">
+                <div class="corpo-card">
+                  <h4 class="titulo-card d-flex justify-content-center">Card title</h4>
+                  <p class="texto-card">Some quick example text to build on the card title and make up the bulk </p>
                 </div>
+              </div>
             </div>
-            <div class="carousel-item">
-                <div class="row">
-                    <div class="col-3"><img class="d-block w-100" src="https://i.imgur.com/06WlUVI.png"
-                            alt="Primeiro Slide">
-                    </div>
 
-                    <div class="col-3"><img class="d-block w-100" src="https://i.imgur.com/EA1v0xb.jpg"
-                            alt="Primeiro Slide">
-                    </div>
-
-                    <div class="col-3"><img class="d-block w-100" src="https://i.imgur.com/GjszAsI.jpg"
-                            alt="Primeiro Slide">
-                    </div>
-
-                    <div class="col-3"><img class="d-block w-100" src="https://i.imgur.com/EA1v0xb.jpg"
-                            alt="Primeiro Slide">
-                    </div>
+            <div class="col-md-3 clearfix d-none d-md-block">
+              <div class="card mb-2 tamanhoCard">
+                <img class="card-img-top" src="https://i.imgur.com/GJzoBXp.jpeg" alt="Card image cap">
+                <div class="corpo-card">
+                  <h4 class="titulo-card d-flex justify-content-center">Card title</h4>
+                  <p class="texto-card">Some quick example text to build on the card title and make up the bulk</p>
                 </div>
+              </div>
             </div>
+
+            <div class="col-md-3 clearfix d-none d-md-block">
+              <div class="card mb-2 tamanhoCard">
+                <img class="card-img-top" src="https://i.imgur.com/KoatrYj.jpeg" alt="Card image cap">
+                <div class="corpo-card">
+                  <h4 class="titulo-card d-flex justify-content-center">Card title</h4>
+                  <p class="texto-card">Some quick example text to build on the card title and make up the bulk </p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-3 clearfix d-none d-md-block">
+                <div class="card mb-2 tamanhoCard">
+                  <img class="card-img-top" src="https://i.imgur.com/xQmh2Pn.jpeg" alt="Card image cap">
+                  <div class="corpo-card">
+                    <h4 class="titulo-card d-flex justify-content-center">Card title</h4>
+                    <p class="texto-card">Some quick example text to build on the card title and make up the bulk </p>
+                  </div>
+                </div>
+              </div>
+          </div>
+
         </div>
-        <div class="container d-flex justify-content-between">
-            <a class="btn btn-info" href="#carouselExampleControls" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon " aria-hidden="true"></span>
-                <span class="sr-only">Anterior</span>
-            </a>
+        <!--/.First slide-->
 
-            <a class="btn btn-info" href="#carouselExampleControls" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Próximo</span>
-            </a>
-        </div>
+        <!--First slide-->
+        <div class="carousel-item active ">
 
+            <div class="row d-flex justify-content-center">
+              <div class="col-md-3">
+                <div class="card mb-2">
+                  <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Horizontal/City/4-col/img%20(47).jpg"
+                    alt="Card image cap">
+                  <div class="corpo-card">
+                    <h4 class="titulo-card d-flex justify-content-center">Card title</h4>
+                    <p class="texto-card">Some quick example text to build on the card title and make up the bulk </p>
+                  </div>
+                </div>
+              </div>
+  
+              <div class="col-md-3 clearfix d-none d-md-block">
+                <div class="card mb-2">
+                  <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Horizontal/City/4-col/img%20(48).jpg"
+                    alt="Card image cap">
+                  <div class="corpo-card">
+                    <h4 class="titulo-card d-flex justify-content-center">Card title</h4>
+                    <p class="texto-card">Some quick example text to build on the card title and make up the bulk</p>
+                  </div>
+                </div>
+              </div>
+  
+              <div class="col-md-3 clearfix d-none d-md-block">
+                <div class="card mb-2">
+                  <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Horizontal/Food/4-col/img%20(53).jpg"
+                    alt="Card image cap">
+                  <div class="corpo-card">
+                    <h4 class="titulo-card d-flex justify-content-center">Card title</h4>
+                    <p class="texto-card">Some quick example text to build on the card title and make up the bulk </p>                    
+                  </div>
+                </div>
+              </div>
 
+              <div class="col-md-3 clearfix d-none d-md-block">
+                <div class="card mb-2">
+                  <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Horizontal/Food/4-col/img%20(53).jpg"
+                    alt="Card image cap">
+                  <div class="corpo-card">
+                    <h4 class="titulo-card d-flex justify-content-center">Card title</h4>
+                    <p class="texto-card">Some quick example text to build on the card title and make up the bulk </p>                    
+                  </div>
+                </div>
+              </div>
+            </div>
+  
+          </div>
+          <!--/.First slide-->
+      </div>
+      <!--/.Slides-->
+
+      </div>
+      
+      <!--Controls-->
+      <div class="d-flex justify-content-center topmargin-10">
+        <a class="button-Carousel-Cards" href="#multi-item-example" data-slide="prev"><i class="fa fa-chevron-left"> < </i></a>
+        <a class="button-Carousel-Cards" href="#multi-item-example" data-slide="next"><i class="fa fa-chevron-right"> > </i></a>
+      </div>
+      <!--/.Controls-->
     </div>
+    <!--/.Carousel Wrapper-->
+  </div>
 
-</div>
-<!--/Carousel-->
+
+<!--/Carousel cards-->
 
 
 
@@ -289,15 +356,3 @@
     </div>
 </footer>
 <!--/Rodapé-->
-
-
-
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado"
-        aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-
-
-</nav>
