--- a/src/app/cadastro/cadastro.component.css
+++ b/src/app/cadastro/cadastro.component.css
@@ -153,6 +153,14 @@
     border: none;
     padding: 10px;
   }
+
+  .main-container .login-wrapper .form-wrapper .form-container .form select {
+    width: 100%;
+    margin-bottom: 15px;
+    background-color: #eeeeee;
+    border: none;
+    padding: 10px;
+  }
   
   .main-container .login-wrapper .form-wrapper .form-container .form input:focus {
     outline: 2px solid #4694a8;
