Criação do componente NavBar

--- a/src/app/rodape/rodape.component.css
+++ b/src/app/rodape/rodape.component.css
@@ -23,13 +23,13 @@ ul.social-network li{
 }
 
 .fa-facebook-square:hover{
-    color: rgb(70, 70, 255);
+    color: #3b5998;
 }
 
 .fa-instagram:hover{
-    color: #f8008d;
+    color: #e95950;
 }
 
 .fa-linkedin:hover{
-    color: #00a6ff;
+    color: #0e76a8;
 }
