--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -21,8 +21,6 @@
 }
 
 .logo{
-    height:60px;
-    margin-top: 5px;
-    margin-left: 10px;
-    margin-right: 20px;
+    height:50px;
+    margin: 0px 20px 0px 10px ;
 }
