--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-sm">
-    <img class="logo" src="https://i.imgur.com/S4bJM69.png" alt="Logo Livraria Abraço">
+    <img class="logo" src="https://i.imgur.com/6WIAE8r.png" alt="Logo Livraria Abraço">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado"
         aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
         <span class="navbar-toggler-icon"></span>
@@ -19,8 +19,8 @@
             <li class="nav-item">
                 <a class="nav-link" routerLink='/contatos'>CONTATOS</a>
             </li>
-
         </ul>
+
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
                 <a class="nav-link" routerLink='/login'>LOGIN</a>
@@ -29,6 +29,6 @@
                 <a class="nav-link" routerLink='/cadastro'>CADASTRO</a>
             </li>
         </ul>
-    </div>
+        </div>
 </nav>
 
