Atualização navbar, login, cadastro e inserção de categoria e produto

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,9 @@
-<app-admnavbar></app-admnavbar>
+<app-navbar *ngIf='auth.tipoDeUsuarioLogado() == ""'></app-navbar>
+
+<app-admnavbar *ngIf='auth.tipoDeUsuarioLogado() == "adm"'></app-admnavbar>
+
+<app-usernavbar *ngIf='auth.tipoDeUsuarioLogado() == "normal"'></app-usernavbar>
+
 
 <router-outlet></router-outlet>
 
