--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -27,7 +27,7 @@
                             <input [(ngModel)]='usuario.senha' type="password" name="user-password" id="user-password"
                                 placeholder="Confirmar Senha">
                             
-                            <label for="tipo">Tipo de Usuário</label>
+                            <label for="tipo"></label>
                             <select class="form" name="tipo" id="tipo" (change)='tipoUsuario($event)'>
                                 <option value="">Selecione o tipo de usuário</option>
                                 <option value="normal">Normal</option>
