--- a/src/app/admnavbar/admnavbar.component.html
+++ b/src/app/admnavbar/admnavbar.component.html
@@ -25,16 +25,16 @@
 
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <p class="nav-link" routerLink='/login'>Olá, Fulano</p>
+                <p class="nav-link" routerLink='/login'>Olá, {{nome}}</p>
             </li>
             <li class="nav-item">
-                <a class="nav-link" routerLink='/login'><img src="https://i.imgur.com/LvMdQn4.png" alt="Icone Novo Produto"></a>
+                <a class="nav-link" routerLink='/produto'><img src="https://i.imgur.com/LvMdQn4.png" alt="Icone Novo Produto"></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" routerLink='/login'><img src="https://i.imgur.com/2uokwRX.png" alt="Icone Nova Categoria"></a>
+                <a class="nav-link" routerLink='/categoria'><img src="https://i.imgur.com/2uokwRX.png" alt="Icone Nova Categoria"></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" routerLink='/login'><img src="https://i.imgur.com/2HXUqoo.png" alt="Icone sair"></a>
+                <a class="nav-link" (click)='sair()'><img src="https://i.imgur.com/2HXUqoo.png" alt="Icone sair"></a>
             </li>
         </ul>
         </div>
