--- a/src/app/categoria/categoria.component.html
+++ b/src/app/categoria/categoria.component.html
@@ -1,1 +1,76 @@
-<p>categoria works!</p>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-12">
+
+            <a routerLink='/home' class="text-left">Início</a>
+
+            <h1 class="fs-54 text-center">Categoria</h1>
+            <h5 class="fs-18 text-center">Veja todas as categorias ou cadastre um novo</h5>
+
+            <div class="row d-flex justify-content-center">
+                <div class="col-md-3">
+                    <div class="form-group">
+                        <input [(ngModel)]='categoria.genero' type="text" class="form-control mb-2" id="genero"
+                            placeholder="Digite o genero da categoria">
+                        <input [(ngModel)]='categoria.assunto' type="text" class="form-control mb-2" id="assunto"
+                            placeholder="Digite o assunto da categoria">
+                        <input [(ngModel)]='categoria.nacionalidade' type="text" class="form-control mb-2" id="nacionalidade"
+                            placeholder="Digite a nacionalidade da categoria">
+                    </div>
+
+                    <div class="d-flex justify-content-center">
+                        <button class="btn btn-success" (click)='cadastrar()'>Cadastrar</button>
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+    </div>
+</div>
+
+<div class="container">
+    <div class="row mt-5">
+        <div class="col-md-12">
+            <h2 class="text-center">Todas as Categorias</h2>
+        </div>
+    </div>
+
+    <div class="row mt-3 d-flex justify-content-center">
+        <div class="col-md-6">
+            <!--Tabela-->
+            <table class="table table-hover">
+                <thead>
+                  <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Primeiro</th>
+                    <th scope="col">Último</th>
+                    <th scope="col">Nickname</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <th scope="row">1</th>
+                    <td>Mark</td>
+                    <td>Otto</td>
+                    <td>@mdo</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">2</th>
+                    <td>Jacob</td>
+                    <td>Thornton</td>
+                    <td>@fat</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">3</th>
+                    <td colspan="2">Larry the Bird</td>
+                    <td>@twitter</td>
+                  </tr>
+                </tbody>
+              </table>
+
+
+            <!--/Tabela-->
+        </div>
+    </div>
+</div>
