--- a/src/app/usernavbar/usernavbar.component.html
+++ b/src/app/usernavbar/usernavbar.component.html
@@ -28,10 +28,10 @@
                 <a class="nav-link" routerLink='/login'><img src="https://i.imgur.com/2uokwRX.png" alt="Icone Nova Categoria"></a>
             </li>
             <li class="nav-item">
-                <p class="nav-link" routerLink='/login'>Olá, Fulano</p>
+                <p class="nav-link" routerLink='/login'>Olá, {{nome}}</p>
             </li>
             <li class="nav-item">
-                <a class="nav-link" routerLink='/login'><img src="https://i.imgur.com/2HXUqoo.png" alt="Icone sair"></a>
+                <a class="nav-link" (click)='sair()'><img src="https://i.imgur.com/2HXUqoo.png" alt="Icone sair"></a>
             </li>
         </ul>
         </div>
