--- a/src/app/cadastro/cadastro.component.css
+++ b/src/app/cadastro/cadastro.component.css
@@ -1,273 +1,81 @@
 * {
-    box-sizing: border-box;
-  }
-
-.navbar{
-    background-color: #005186;
-    font-family: SansSerif;
-    font-size: 13pt;
+  box-sizing: border-box;
 }
 
-.navbar-brand{
-    color:white
+.main-container .login-wrapper {
+  background-color: #fff;
+  -webkit-box-shadow: 0px 0px 10px 6px rgba(0,0,0,0.2);
+  width: 100%;
+  margin:50px 0px 100px 0px ;
+  display: flex;
 }
-
-.nav-link:hover{
-    color: #65ACD8;
-}
-
-.nav-link{
-    color:white;
-}
-.navbar-brand{
-    font-size: 15pt;
-    font-family: Freestyle Script;
-}
-
-#img-bg{
-    background-image: url(https://i.imgur.com/DnUWPqC.jpg);
-    background-repeat: no-repeat;
-    background-position: 50%;
-    padding-top: 25px;
-    padding-bottom: 25px;
-    margin-bottom: 25px;
-    background-size: 90%;
-}
-
-.corDefundo{
-    background-color: #f9f9f9;
-}
-
-
-
-.navbar{
-    background-color: #005186;
-    font-family: SansSerif;
-    font-size: 13pt;
-}
-
-.navbar-brand{
-    color:white
-}
-
-.nav-link:hover{
-    color: #65ACD8;
-}
-
-.nav-link{
-    color:white;
-}
-.navbar-brand{
-    font-size: 15pt;
-    font-family: Freestyle Script;
-}
-
-#img-bg{
-    background-image: url(https://i.imgur.com/DnUWPqC.jpg);
-    background-repeat: no-repeat;
-    background-position: 50%;
-    padding-top: 25px;
-    padding-bottom: 25px;
-    margin-bottom: 25px;
-    background-size: 90%;
-}
-
-.corDefundo{
-    background-color: #f9f9f9;
-}
-  
-  .main-container {
-    min-height: 75vh;
-    background-color: #ffffff;
     
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  
-    font-family: 'Rubik', sans-serif;
-    font-size: 13px;
-  }
-  
-  .main-container a {
-    text-decoration: none;
-  }
-  
-  .main-container .login-wrapper {
-    background-color: #fff;
-    -webkit-box-shadow: 0px 0px 10px 6px rgba(0,0,0,0.2);
-  
-  
-    width: 100%;
-    max-width: 900px;
-    min-height: 520px;
-    display: flex;
-  }
-  
-  
-  .main-container .login-wrapper .form-wrapper {
-    min-width: 45%;
-    
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .main-container .login-wrapper .form-wrapper .form-header {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    
-    padding: 10px;
-    margin-top: 15px;
-  
-    font-weight: 900;
-  }
-  
-  .main-container .login-wrapper .form-wrapper .form-header .fa-arrow-left,
-  .main-container .login-wrapper .form-wrapper .form-header .register-link,
-  .main-container .login-wrapper .form-wrapper .form-container .forgot-pass {
-    color: #686b72;
-  }
-  
-  
-  .main-container .login-wrapper .form-wrapper .form-container {
-    padding: 0px 60px;
-  }
-  
-  .main-container .login-wrapper .form-wrapper .form-container .form-messages {
-    text-align: left;
-    line-height: 20px;
-    margin-bottom: 30px;
-  }
-  
-  .main-container .login-wrapper .form-wrapper .form-container .form-messages h2 {
-    margin-bottom: 15px;
-    margin-top: 30px;
-    font-size: 20px;
-    font-weight: 600;
-  }
-  
-  .main-container .login-wrapper .form-wrapper .form-container .form input {
-    width: 100%;
-    margin-bottom: 15px;
-    background-color: #eeeeee;
-    border: none;
-    padding: 10px;
-  }
+.main-container .login-wrapper .form-wrapper .form-container {
+  padding: 0px 60px;
+}
 
-  .main-container .login-wrapper .form-wrapper .form-container .form select {
-    width: 100%;
-    margin-bottom: 15px;
-    background-color: #eeeeee;
-    border: none;
-    padding: 10px;
-  }
-  
-  .main-container .login-wrapper .form-wrapper .form-container .form input:focus {
-    outline: 2px solid #4694a8;
-  }
-  
-  .main-container .login-wrapper .form-wrapper .form-container .form a {
-    display: block;
-  }
-  
-  .main-container .login-wrapper .form-wrapper .form-container .form .forgot-pass {
-    text-align: right;
-    font-weight: 900;
-  }
- .login-button {
+.main-container .login-wrapper .form-wrapper .form-container .form input {
+  width: 100%;
+  margin-bottom: 15px;
+  background-color: #eeeeee;
+  border: none;
+  padding: 10px;
+}
 
-    
-    width:180px ;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    padding: 10px;
-    border-radius: 50px;
-    background-color: #ce1414b6;
-    color: #fff;
-    text-align: center;
-  }
+.main-container .login-wrapper .form-wrapper .form-container .form input:focus {
+  outline: 2px solid #4694a8;
+}
 
-  .login-button1 {
+.main-container .login-wrapper .form-wrapper .form-container .form select {
+  width: 100%;
+  margin-bottom: 15px;
+  background-color: #eeeeee;
+  border: none;
+  padding: 10px;
+  
+}
 
-    
-    width:180px ;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    padding: 10px;
-    border-radius: 50px;
-    background-color: #005186;
-    color: #fff;
-    text-align: center;
-  }
+.main-container .login-wrapper .form-wrapper .form-container .form select:focus {
+  outline: 2px solid #4694a8;
+}
+
+.cancelar-button { 
+  width:180px ;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  padding: 10px;
+  border-radius: 50px;
+  border: none;
+  background-color: #ce1414b6;
+  color: #fff;
+  text-align: center;
+}
+
+.cadastrar-button {    
+  width:180px ;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  padding: 10px;
+  border-radius: 50px;
+  border: none;
+  background-color: #005186;
+  color: #fff;
+  text-align: center;
+}
   
-  /* Separador */
-  .main-container .login-wrapper .form-wrapper .form-container .separator {
-    border: 2px solid #e8e9ea;
-    margin-bottom: 35px;
-  }
-  
-  /* login */
-  .main-container .login-wrapper .form-wrapper .form-container .login-options {
-    margin: 20px 20px;
-    text-align: center;
-  }
-  
-  .main-container .login-wrapper .form-wrapper .form-container .login-options .login-text {
-    margin-bottom: 15px;
-  }
-  
-  .main-container .login-wrapper .form-wrapper .form-container .login-icons {
-    font-size: 20px;
-  }
-  
-  .main-container .login-wrapper .form-wrapper .form-container .login-icons .fa-facebook-square,
-  .main-container .login-wrapper .form-wrapper .form-container .login-icons .fa-google,
-  .main-container .login-wrapper .form-wrapper .form-container .login-icons .fa-twitter {
-    color: #4694a8;
-    padding: 0px 10px;
-  }
-  
-  /* Imagem*/
-  
-  .main-container .image-wrapper {
-    background: url("https://i.imgur.com/Wnd8pOM.jpg");
-    width: 100%;
-    background-position: center;
-    background-size: cover;
-  
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-  }
-  
-  .main-container .image-wrapper .image-message {
-    color: #fff;
-    line-height: 20px;
-  
-    padding: 50px 70px 70px 40px;
-  
-    display: flex;
-    flex-direction: row;
-  }
-  
-  .main-container .image-wrapper .image-message .image-hr-container {
-    margin: 5px 20px;
-  }
-  
-  .main-container .image-wrapper .image-message .image-hr-container .image-hr {
-    border: 1px solid #e8e9ea;
-    min-width: 30px;
-  }
-  
-  .main-container .image-wrapper .image-message .image-text h2 {
-    font-size: 24px;
-    font-weight: 600;
-    margin-bottom: 15px;
-  }
+/* Imagem*/
+.main-container .image-wrapper {
+  background: url("https://i.imgur.com/siGwTCX.jpg");
+  width: 100%;
+  background-position: center;
+  background-size: cover;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
  
-  #alinhador
-  {
-     
-     padding-left: 23mm;
-  }
- 
+.cadastro
+{
+   margin: 30px 0px 15px 140px;
+}
