Atualização na estilização -html e css- das paginas Login e Cadastro

--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -9,7 +9,7 @@
                 <section class="form-wrapper">
                     <div class="form-container align-items-center">
                         <div class="form-messages">
-                            <h1 style="margin: 30px 0px 15px 140px">Cadastro</h1>
+                            <h1 class="cadastro">Cadastro</h1>
                         </div>  
                         <form action="fakeurl.php" class="form">
                             <input [(ngModel)]='usuario.nome' type="user" name="user" id="user-email" placeholder="Nome">
