--- a/src/app/produto/produto.component.html
+++ b/src/app/produto/produto.component.html
@@ -10,22 +10,23 @@
             <div class="row d-flex justify-content-center">
                 <div class="col-md-3">
                     <div class="form-group">
-                        <input type="text" class="form-control mb-2" id="produto"
+                        <input [(ngModel)]='produto.nome' type="text" class="form-control mb-2" id="nome"
                             placeholder="Digite o nome do produto">
-                        <input type="text" class="form-control mb-2" id="valor"
+                        <input [(ngModel)]='produto.preco' type="number" class="form-control mb-2" id="preco"
                             placeholder="Digite o preço do produto">
-                        <input type="text" class="form-control mb-2" id="quantidade"
+                        <input [(ngModel)]='produto.quantidade' type="number" class="form-control mb-2" id="quantidade"
                             placeholder="Digite a quantidade">
-                        <input type="text" class="form-control mb-2" id="imagem"
+                        <input [(ngModel)]='produto.imagem' type="text" class="form-control mb-2" id="imagem"
                             placeholder="Link da imagem">
-                        <select class="form-control mb-2" name="categoria" id="dropCategorias" ></select>
-                        <option value="1">
-                           
-                        </option>
+                            <select class="form-control mb-2" name="categoria" id="dropCategorias" [(ngModel)] = 'idCategoria' (change) = 'findByIdCategoria()'>
+                                <option *ngFor='let item of listaCategorias' value="{{item.id}}">
+                                    {{item.assunto}}                         
+                                </option>
+                            </select>
                     </div>
 
                     <div class="d-flex justify-content-center">
-                        <button class="btn btn-success">Adicionar</button>
+                        <button class="btn btn-success" (click)='cadastrarProduto()'>Adicionar</button>
                     </div>
                 </div>
 
