Implementação inicial de Put, Post, Delete e Get de Produtos.

--- a/src/app/delete/categoria-delete/categoria-delete.component.html
+++ b/src/app/delete/categoria-delete/categoria-delete.component.html
@@ -1,14 +1,14 @@
 <div class="container mb-5 mt-5">
     <div class="row mb-5">
         <div class="col-md-12">
-            <h1 class="text-center text-black">Apagar Tema</h1>
+            <h1 class="text-center text-black">Apagar Categoria</h1>
 
         </div>
     </div>
     <div class="row mb-3">
         <div class="col-md-12">
-            <h4 class="text-center text-secondary">Tem certeza que deseja apagar este tema? Todas as postagens
-                relacionadas a ele serão igualmente apagadas!</h4>
+            <h4 class="text-center text-secondary">Tem certeza que deseja apagar esta Categoria? Todas os Produtos
+                relacionados a ele serão igualmente apagadas!</h4>
         </div>
     </div>
 
