--- a/src/app/edit/categoria-edit/categoria-edit.component.html
+++ b/src/app/edit/categoria-edit/categoria-edit.component.html
@@ -8,11 +8,11 @@
     <div class="row d-flex justify-content-center">
         <div class="col-md-6">
             <div class="form-group">
-                <label for="descricao">Gênero</label>
-                <input type="text" class="form-control" id="descricao" [(ngModel)]='categoria.genero'>
+                <label for="genero">Gênero</label>
+                <input type="text" class="form-control" id="genero" [(ngModel)]='categoria.genero'>
 
-                <label for="descricao">Assunto</label>
-                <input type="text" class="form-control" id="descricao" [(ngModel)]='categoria.assunto'>
+                <label for="assunto">Assunto</label>
+                <input type="text" class="form-control" id="assunto" [(ngModel)]='categoria.assunto'>
 
             
             </div>
