--- a/src/app/produto/produto.component.html
+++ b/src/app/produto/produto.component.html
@@ -11,13 +11,15 @@
                 <div class="col-md-3">
                     <div class="form-group">
                         <input [(ngModel)]='produto.nome' type="text" class="form-control mb-2" id="nome"
-                            placeholder="Digite o nome do produto">
+                            placeholder="Digite o titulo do livro">
+                        <input [(ngModel)]='produto.autor' type="text" class="form-control mb-2" id="autor"
+                        placeholder="Digite o nome do autor">   
                         <input [(ngModel)]='produto.preco' type="number" class="form-control mb-2" id="preco"
-                            placeholder="Digite o preço do produto">
+                            placeholder="Digite o preço do livro">
                         <input [(ngModel)]='produto.quantidade' type="number" class="form-control mb-2" id="quantidade"
-                            placeholder="Digite a quantidade">
+                            placeholder="Digite a quantidade de livros adicionados">
                         <input [(ngModel)]='produto.imagem' type="text" class="form-control mb-2" id="imagem"
-                            placeholder="Link da imagem">
+                            placeholder="Imagem da capa do livro (link)">
                             <select class="form-control mb-2" name="categoria" id="dropCategorias" [(ngModel)] = 'idCategoria' (change) = 'findByIdCategoria()'>
                                 <option *ngFor='let item of listaCategorias' value="{{item.id}}">
                                     {{item.assunto}}                         
@@ -28,10 +30,59 @@
                     <div class="d-flex justify-content-center">
                         <button class="btn btn-success" (click)='cadastrarProduto()'>Adicionar</button>
                     </div>
+
                 </div>
 
             </div>
 
+        </div>
+    </div>
+</div>
+
+<div class="container">
+    <div class="row mt-5">
+        <div class="col-md-12">
+            <h2 class="text-center">Todas os Produtos</h2>
+        </div>
+    </div>
+
+    <div class="row mt-3 d-flex justify-content-center">
+        <div class="col-md-6">
+            <!--Tabela-->
+            <table class="table table-hover">
+                <thead>
+                  <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Título</th>
+                    <th scope="col">Autor</th>
+                    <th scope="col">Preço</th>
+                    <th scope="col">Quantidade</th>
+                    <th scope="col">Genêro</th>
+                    <th scope="col">Assunto</th>
+                    <th scope="col" class="text-right">Modificações</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr *ngFor='let item of listaProdutos'>
+                    <th>{{item.id}}</th>
+                    <td>{{item.nome}}</td>
+                    <td>{{item.autor}}</td>
+                    <td>{{item.preco}}</td>
+                    <td>{{item.quantidade}}</td>
+                    <td>{{item.categoria.genero}}</td>
+                    <td>{{item.categoria.assunto}}</td>
+                    <td class="d-flex justify-content-end">
+                        <button class="btn btn-info mr-3" [routerLink]="['/produto-edit',item.id]">Editar</button>
+                        <button class="btn btn-danger" [routerLink]="['/produto-delete',item.id]">Apagar</button>
+                    </td>
+                  </tr>
+                  
+                  
+                </tbody>
+              </table>
+
+
+            <!--/Tabela-->
         </div>
     </div>
 </div>
